--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
@@ -104,13 +104,26 @@
     </ion-col>
     <ion-col size="12">
       <ion-item>
-        <ion-input type="file" id="doc" (ionChange)="mostrarVistaPrevia();"></ion-input>
-      <!-- <ion-button (click)="mostrarVistaPrevia();">Elegir guion</ion-button>-->
+        <ion-label>Texto original:</ion-label>
+        <input (change)="leoFicheroTexto()" type="file" id="textFile" accept=".txt">
+      </ion-item>
+    </ion-col>
+    <ion-col size="12">
+      <ion-item>
+        <ion-label>Comentarios:</ion-label>
+        <input (change)="leoComentarios()" type="file" id="commFile" accept=".txt">
       </ion-item>
     </ion-col>
     <ion-col size="12">
       <embed id="vistaPrevia" src=""  width="100%" height="450" type="application/pdf">
     </ion-col>
+</ion-row>
+<ion-row>
+  <ion-col size="12">
+    <ion-item>
+      <ion-button (click)="crearProyecto();">Crear</ion-button>
+    </ion-item>
+  </ion-col>
 </ion-row>
 
   </form>
