--- a/scrip-trad/src/app/pages/editor/editor.page.scss
+++ b/scrip-trad/src/app/pages/editor/editor.page.scss
@@ -5,7 +5,7 @@ ion-avatar {
 }
 
 ion-icon {
-    font-size: 24px;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -29,6 +29,8 @@ ion-item-divider {
     margin-bottom: 2%;
 }
 
-#inputTrad{
+#tmForm{
     width: 100%;
 }
+
+
