routing editor arreglado

--- a/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.html
+++ b/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.html
@@ -79,11 +79,11 @@
     <ion-tabs>
   
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
-        <ion-tab-button tab="listado-proyectos-gestor" (click)="irEditorConPrimerProyectoDeLista();">
+        <ion-tab-button (click)="irEditorConPrimerProyectoDeLista();">
           <ion-icon name="pencil-outline"></ion-icon>
         </ion-tab-button>
     
-        <ion-tab-button tab="tab2" (click)="irInicioTraductor();">
+        <ion-tab-button (click)="irInicioTraductor();">
           <ion-icon name="home-outline"></ion-icon>
         </ion-tab-button>
     <!--
