--- a/scrip-trad/src/app/pages/editor/editor.page.html
+++ b/scrip-trad/src/app/pages/editor/editor.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     
     <ion-title>Editor traducción</ion-title>
-    <ion-icon name="arrow-back-outline" (click)="irInicioTraductor();"></ion-icon>
+    
     <!--Imagen de usuario logueado-->
     <ion-avatar slot="end" id="usu" button (click)="mostrarMenu()">
       <img
@@ -18,6 +18,7 @@
   <!-- Tarjeta para contener todos los items -->
   <ion-card>
     <ion-card-content>
+      <!--<ion-icon name="arrow-back-outline" (click)="irInicioTraductor();"></ion-icon>-->
       <!--<form>-->
         <!--Primera fila para character matching y boton generar trad-->
         <ion-row>
@@ -39,7 +40,7 @@
           </ion-row>
           <ion-row>
             <ion-col>
-              <ion-item style="background-color: rgb(211, 94, 94);">
+              <ion-item style="background-color: rgb(211, 94, 94);" *ngIf="segmentoActual">
                 <ion-textarea
                   disabled
                   readonly
@@ -67,7 +68,7 @@
           <!-- Espacio para traduccion-->
           <ion-col size="12"> <!--class="borde" -->
             <form id="tmForm">
-              <ion-item>
+              <ion-item *ngIf="segmentoActual">
                 <ion-textarea id="traduccion"
                   value="{{segmentoActual.textoLM}}">
                 </ion-textarea> 
@@ -136,7 +137,7 @@
             </ion-item>
           </ion-col>
           <ion-col size="12">
-            <p class="ion-padding-horizontal">{{proyectoActual.comentarios}}</p>
+            <p class="ion-padding-horizontal" *ngIf="proyectoActual">{{proyectoActual.comentarios}}</p>
           </ion-col>
           <ion-col size="12">
             <ion-textarea placeholder="Anadir comentarios"></ion-textarea>
@@ -148,16 +149,16 @@
   </ion-card>
 </ion-content>
 
-<!--<ion-footer>
+<ion-footer>
   <ion-toolbar>
     <ion-tabs>
 
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
-         <ion-tab-button tab="listado-proyectos-gestor" (click)="irEditor();">
+         <ion-tab-button>
           <ion-icon name="pencil-outline"></ion-icon>
         </ion-tab-button>
 
-        <ion-tab-button tab="tab2" (click)="irInicioTraductor();">
+        <ion-tab-button (click)="irInicioTraductor();">
           <ion-icon name="home-outline"></ion-icon>
         </ion-tab-button>
       </ion-tab-bar>
@@ -165,4 +166,4 @@
     </ion-tabs>
   </ion-toolbar>
 
-</ion-footer>-->
+</ion-footer>
