--- a/scrip-trad/src/app/pages/editor/editor.page.html
+++ b/scrip-trad/src/app/pages/editor/editor.page.html
@@ -58,7 +58,7 @@
               <ion-col size="11" class="ion-text-center">
                 <span style="font-weight: bold; padding-left: 8vw;">TM</span>
               </ion-col>
-              <ion-col size="1"  class="ion-text-center">
+              <ion-col size="1"  class="ion-text-center" style="color: #5260ff">
                 <ion-icon name="language-outline" class="text-tertiary" button (click)="generarTraduccion();"></ion-icon>
               </ion-col>
             </ion-row>
@@ -84,48 +84,49 @@
         <ion-row class="borde">
           <!-- Busqueda -->
           <ion-col size="12">
-            <ion-row>
-              <ion-col size="11">
-                <ion-item>
-                  <ion-label position="floating">Glosario</ion-label>
-                  <ion-input></ion-input>
-                </ion-item>
-                <!--<ion-input type="text" placeholder="Buscar en glosario interno"></ion-input>-->
-              </ion-col>
-              <ion-col size="1" class="ion-align-self-center ion-text-lg-center">
-                <ion-icon name="search-outline"></ion-icon>
-              </ion-col>
-            </ion-row>
-            
+            <ion-item>
+              <ion-label position="floating">Glosario</ion-label>
+              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Buscar en glosario" required="true"></ion-input>
+              <ion-icon name="search-outline" color="" slot="end" class="ion-align-self-center ion-text-lg-center"></ion-icon>
+            </ion-item>
           </ion-col>
           <!-- Resultado -->
           <ion-col size="12">
-            <ion-input placeholder="Aquí va el resultado de la bbdd"></ion-input>
+            <!--<ion-input placeholder="Aquí va el resultado de la bbdd"></ion-input>-->
+            <ion-item style="background-color: rgb(211, 94, 94);" *ngIf="glosarioActual">
+              <ion-textarea
+                disabled
+                readonly
+                value="{{glosarioActual.terminoLO}}: {{glosarioActual.terminoLM}}">
+              </ion-textarea>
+            </ion-item>
           </ion-col>
           <!-- Add new-->
-          <ion-col size="12">
+          <ion-col size="12"><form [formGroup]="glosarioForm" id="glosForm">
             <ion-row>
-              <ion-col size-lg="">
-                <ion-item>
-                  <ion-label position="floating">Término LO</ion-label>
-                  <ion-input></ion-input>
-                </ion-item>
-              </ion-col>
-              <ion-col size-lg="1" class="ion-hide-lg-down ">
-                <ion-row class="ion-justify-content-center ">
-                  <ion-icon name="arrow-forward-outline" style="margin-top: 15px;"></ion-icon>
-                </ion-row>
-              </ion-col>
-              <ion-col size-lg="">
-                <ion-item>
-                  <ion-label position="floating">Término LM</ion-label>
-                  <ion-input></ion-input>
-                </ion-item>
-              </ion-col>
-              <ion-col size-lg="1" class="ion-align-self-center ion-text-center" style="color: green;">
-                <ion-icon name="checkmark-outline"></ion-icon>
-              </ion-col>
-            </ion-row>
+              
+                <ion-col size-lg="5">
+                  <ion-item>
+                    <ion-label position="floating">Término LO</ion-label>
+                    <ion-input type="text" formControlName="terminoO"></ion-input>
+                  </ion-item>
+                </ion-col>
+                <ion-col size-lg="1" class="ion-hide-lg-down ">
+                  <ion-row class="ion-justify-content-center ">
+                    <ion-icon name="arrow-forward-outline" style="margin-top: 15px;"></ion-icon>
+                  </ion-row>
+                </ion-col>
+                <ion-col size-lg="5">
+                  <ion-item>
+                    <ion-label position="floating">Término LM</ion-label>
+                    <ion-input type="text" formControlName="terminoM"></ion-input>
+                  </ion-item>
+                </ion-col>
+                <ion-col size-lg="1" class="ion-align-self-center ion-text-center" style="color: green;">
+                  <ion-icon name="checkmark-outline" (click)="glosarioConfirm();"></ion-icon>
+                </ion-col>
+              
+            </ion-row></form>
           </ion-col>
         </ion-row>
 
