--- a/scrip-trad/src/app/pages/editor/editor.page.html
+++ b/scrip-trad/src/app/pages/editor/editor.page.html
@@ -85,8 +85,10 @@
           <!-- Busqueda -->
           <ion-col size="12">
             <ion-item>
+              
               <ion-label position="floating">Glosario</ion-label>
-              <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Buscar en glosario" required="true"></ion-input>
+              <ion-input id="inputBusquedaGlosario" list="equivalencias" autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" inputmode="text" placeholder="Buscar en glosario" required="true"
+              (ionChange)="buscarEnGlosario();"></ion-input>
               <ion-icon name="search-outline" color="" slot="end" class="ion-align-self-center ion-text-lg-center"></ion-icon>
             </ion-item>
           </ion-col>
@@ -98,6 +100,13 @@
                 disabled
                 readonly
                 value="{{glosarioActual.terminoLO}}: {{glosarioActual.terminoLM}}">
+              </ion-textarea>
+            </ion-item>
+            <ion-item style="background-color: rgb(211, 94, 94);" *ngIf="noCoincidencia">
+              <ion-textarea
+                disabled
+                readonly
+                value="No se han encontrado coincidencias">
               </ion-textarea>
             </ion-item>
           </ion-col>
