--- a/scrip-trad/src/app/pages/listado-proyectos-gestor/listado-proyectos-gestor.page.html
+++ b/scrip-trad/src/app/pages/listado-proyectos-gestor/listado-proyectos-gestor.page.html
@@ -47,18 +47,14 @@
     <ion-tabs>
   
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
-        <ion-tab-button tab="listado-proyectos-gestor" (click)="crearNuevoProyecto();">
+        <ion-tab-button (click)="crearNuevoProyecto();">
           <ion-icon name="add-circle-outline"></ion-icon>
         </ion-tab-button>
-    
-        <ion-tab-button tab="tab2" (click)="irInicioGestor();">
+        
+        <ion-tab-button (click)="irInicioGestor();">
           <ion-icon name="home-outline"></ion-icon>
         </ion-tab-button>
-    <!--
-        <ion-tab-button tab="tab3">
-          <ion-icon name="menu-outline"></ion-icon>
-          
-        </ion-tab-button>-->
+    
       </ion-tab-bar>
     
     </ion-tabs>
