servicio para editar datos perfil

--- a/scrip-trad/src/app/pages/editor/editor.page.html
+++ b/scrip-trad/src/app/pages/editor/editor.page.html
@@ -111,9 +111,9 @@
             </ion-item>
           </ion-col>
           <!-- Add new-->
-          <ion-col size="12"><form [formGroup]="glosarioForm" id="glosForm">
-            <ion-row>
-              
+          <ion-col size="12">
+            <form [formGroup]="glosarioForm" id="glosForm">
+              <ion-row>              
                 <ion-col size-lg="5">
                   <ion-item>
                     <ion-label position="floating">Término LO</ion-label>
